- add favicon - add navbar styling - fix overflow scroll on footer

--- a/src/stylesheets/app.css
+++ b/src/stylesheets/app.css
@@ -4,17 +4,31 @@ html {
   min-height: 100%;
 }
 body {
-  padding-top: 60px; /* header */
   margin-bottom: 35px; /* footer */
 }
+body > .container {
+  padding-top: 60px;  /* header */
+}
 
-/* sticky footer style */
+/* header */
+#navbar-brand-icon {
+  margin-top: -4px;
+  height: 30px;
+  display: inline;
+}
+#navbar-brand-text {
+  color: #8cc84b;
+}
+
+/* footer */
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 35px;
-  padding-top: 7px;
+  padding-top: 8px;
   background-color: #f5f5f5;
 }
-
+.footer p {
+  margin-bottom: 0px;
+}
